--- a/test/index.html
+++ b/test/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 
-<!--   <div class="input-color-container">
+  <div class="input-color-container">
     <input id="input-color" value="#ed6868" class="input-color" type="color">
   </div>
   
   <label class="input-color-label" for="input-color">
   I am a clickable label, try me
-  </label> -->
-  <div class="form-group">
+  </label>
+<!--   <div class="form-group">
     <div class="input-group">
         <input type="text" name="search" class="form-control" placeholder="Search">
         <span><button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button></span>
      </div>
-</div>
+  </div> -->
 
 </body>
 </html>
